2019-04-16 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Added -setName:forConfiguration: method to set a cache to be
	configured by NSUserDefaults settings rather than programmatically.

2018-03-27 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSIOThreadPool.m: Make the code use NSThread's designated
	initialiser so that GSIOThread can be subclassed safely.

2017-07-13 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSIOThreadPool.m: Make the -terminate: method safe to call from
	any thread (performs itself in the correct thread if it is executing).

2015-10-07 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.m: Add method for writing a whole block of data to a FIFO
	in one go.

2015-07-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSLinkedList.h:
	* GSLinkedList.m:
	Add GSLinkedStore for a list which controls its own links and stores
	unused links to avoid having to create/destroy link objects
	repeatedly.

2015-07-17 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.m: Implement methods that allow waiting on an empty
	FIFO for an arbitrary period of time, without raising an
	exception.

2015-07-16 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.m: Implement -sizeInBytesExcluding:

2015-07-15 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.m: Experimental change (use in conjunction with gnustep-base
	from svn 38799) to put object memory footprint interrogation into the
	base library and make it more accurate and efficient.

2015-05-05 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.m: Fix a potential race condition in -peekObject.

2015-05-05 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.[hm]: Add methods to peek at the top/front object in the
	FIFO without removing it.

2015-04-28 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.m: Use -autorelease rather than -release when returning
	objects from a FIFO. Fixes a bug where a returned reference would
	already be invalid because the FIFO was the last owner of the object.
