@@ -1,3 +1,8 @@
+2019-08-08 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSUniqued.m:
+	Add special case code for handling objcts which can't be copied.
+
 2019-04-16 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSCache.h:
